--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
 <head>
 <meta charset="utf-8">
 <title>Bootcamp HTML Template | Contact</title>
 <!-- Stylesheets -->
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/main.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
+<link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+<link href="{% static 'css/main.css' %}" rel="stylesheet">
+<link href="{% static 'css/responsive.css' %}" rel="stylesheet">
 
 <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 <link rel="icon" href="images/favicon.png" type="image/x-icon">
@@ -26,7 +27,7 @@
 <div class="page-wrapper">
  	
     <!-- Preloader -->
-    <div class="preloader"></div>
+    {% comment %} <div class="preloader"></div> {% endcomment %}
  	
     <!-- Main Header-->
     <header class="main-header header-style-one">
@@ -84,11 +85,11 @@
 
 							<div class="navbar-collapse collapse clearfix" id="navbarSupportedContent">
 								<ul class="navigation clearfix">
-									<li class="current"><a href="index-3.html#">Home</a></li>  
-									<li class="dropdown"><a href="index-3.html#">Books</a>
+									<li class="current"><a href="{% url "home" %}">Главная</a></li>  
+									<li class="dropdown"><a href="{% url "bookPage" %}">Книги</a>
                                         <ul>
-                                            <li><a href="books.html">Books</a></li>
-                                            <li><a href="books-detail.html">Book Detail</a></li>
+                                            <li><a href="{% url "bookPage" %}">Книги</a></li>
+                                            <li><a href="{% url "bookDetail" %}">Детальна информация</a></li>
                                         </ul>
                                     </li> 
 									<li class="dropdown"><a href="index-3.html#">Blog</a>
@@ -131,14 +132,14 @@
 	<!-- Page Title -->
     <section class="page-title">
         <div class="auto-container">
-			<h1>Contact Us</h1>
+			<h1>Связажитесь с нами</h1>
 			
 			<!-- Search Boxed -->
 			<div class="search-boxed">
 				<div class="search-box">
 					<form method="post" action="contact.html">
 						<div class="form-group">
-							<input type="search" name="search-field" value="" placeholder="What do you want to learn?" required>
+							<input type="search" name="search-field" value="" placeholder="Что вы хотите найти?" required>
 							<button type="submit"><span class="icon fa fa-search"></span></button>
 						</div>
 					</form>
@@ -157,7 +158,7 @@
 			<div class="inner-container">
 				<!-- Sec Title -->
 				<div class="sec-title centered">
-					<h2>Get in touch</h2>
+					<h2>Зполните форму</h2>
 				</div>
 				
 				<!-- Contact Form -->
@@ -168,27 +169,27 @@
 						<div class="row clearfix">
 							
 							<div class="col-lg-6 col-md-6 col-sm-12 form-group">
-								<input type="text" name="username" placeholder="First Name*" required="">
+								<input type="text" name="username" placeholder="Имя*" required="">
 							</div>
 							
 							<div class="col-lg-6 col-md-6 col-sm-12 form-group">
-								<input type="text" name="lastname" placeholder="Last Name*" required="">
+								<input type="text" name="lastname" placeholder="Фамилия*" required="">
 							</div>
 							
 							<div class="col-lg-6 col-md-6 col-sm-12 form-group">
-								<input type="email" name="email" placeholder="Email Address*" required="">
+								<input type="email" name="email" placeholder="Email*" required="">
 							</div>
 							
 							<div class="col-lg-6 col-md-6 col-sm-12 form-group">
-								<input type="text" name="phone" placeholder="Phone Number*" required="">
+								<input type="text" name="phone" placeholder="Номер*" required="">
 							</div>
 							
 							<div class="col-lg-12 col-md-12 col-sm-12 form-group">
-								<textarea class="" name="message" placeholder="Send Message"></textarea>
+								<textarea class="" name="message" placeholder="Ваше сообщение"></textarea>
 							</div>
 							
 							<div class="col-lg-12 col-md-12 col-sm-12 form-group text-right">
-								<button class="theme-btn btn-style-three" type="submit" name="submit-form"><span class="txt">Send Message <i class="fa fa-angle-right"></i></span></button>
+								<button class="theme-btn btn-style-three" type="submit" name="submit-form"><span class="txt">Отправить сообщение <i class="fa fa-angle-right"></i></span></button>
 							</div>
 							
 						</div>
@@ -201,7 +202,7 @@
 			<!-- Contact Info Section -->
 			<div class="contact-info-section">
 				<div class="title-box">
-					<h2>Contact Information</h2>
+					<h2>Контактная информация</h2>
 					<div class="text">Lorem Ipsum is simply dummy text of the printing <br> and typesetting industry.</div>
 				</div>
 				
@@ -211,7 +212,7 @@
 					<div class="info-column col-lg-4 col-md-6 col-sm-12">
 						<div class="info-inner">
 							<div class="icon fa fa-phone"></div>
-							<strong>Phone</strong>
+							<strong>Телефон</strong>
 							<ul>
 								<li><a href="tel:+1-123-456-7890">+1 (123) 456-7890</a></li>
 								<li><a href="tel:+1-123-456-7890">+1 (123) 456-7890</a></li>
@@ -235,7 +236,7 @@
 					<div class="info-column col-lg-4 col-md-6 col-sm-12">
 						<div class="info-inner">
 							<div class="icon fa fa-map-marker"></div>
-							<strong>Address</strong>
+							<strong>Адресс</strong>
 							<ul>
 								<li>Portfolio Technology 07, Capetown 12 Road, Chicago, 2436, USA</li>
 							</ul>
@@ -374,25 +375,25 @@
 <!--Scroll to top-->
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-arrow-circle-up"></span></div>
 
-<script src="js/jquery.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/jquery.scrollTo.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-<script src="js/jquery.fancybox.js"></script>
-<script src="js/appear.js"></script>
-<script src="js/swiper.min.js"></script>
-<script src="js/element-in-view.js"></script>
-<script src="js/jquery.paroller.min.js"></script>
-<script src="js/validate.js"></script>
-<script src="js/parallax.min.js"></script>
-<script src="js/tilt.jquery.min.js"></script>
+<script src="{% static 'js/jquery.js' %}"></script>
+<script src="{% static 'js/popper.min.js' %}"></script>
+<script src="{% static 'js/jquery.scrollTo.js' %}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/jquery.mCustomScrollbar.concat.min.js' %}"></script>
+<script src="{% static 'js/jquery.fancybox.js' %}"></script>
+<script src="{% static 'js/appear.js' %}"></script>
+<script src="{% static 'js/swiper.min.js' %}"></script>
+<script src="{% static 'js/element-in-view.js' %}"></script>
+<script src="{% static 'js/jquery.paroller.min.js' %}"></script>
+<script src="{% static 'js/validate.js' %}"></script>
+<script src="{% static 'js/parallax.min.js' %}"></script>
+<script src="{% static 'js/tilt.jquery.min.js' %}"></script>
 <!--Master Slider-->
-<script src="js/jquery.easing.min.js"></script>
-<script src="js/owl.js"></script>
-<script src="js/wow.js"></script>
-<script src="js/jquery-ui.js"></script>
-<script src="js/script.js"></script>
+<script src="{% static 'js/jquery.easing.min.js' %}"></script>
+<script src="{% static 'js/owl.js' %}"></script>
+<script src="{% static 'js/wow.js' %}"></script>
+<script src="{% static 'js/jquery-ui.js' %}"></script>
+<script src="{% static 'js/script.js' %}"></script>
 
 </body>
 </html>
