--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
 <link href="{% static 'css/main.css' %}" rel="stylesheet">
 <link href="{% static 'css/responsive.css' %}" rel="stylesheet">
 
-<link rel="shortcut icon" href="{% static 'images/favicon.png' %}" type="image/x-icon">
-<link rel="icon" href="{% static 'images/favicon.png' %}" type="image/x-icon">
+<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+<link rel="icon" href="images/favicon.png" type="image/x-icon">
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
 
@@ -56,21 +56,21 @@
 
 							<div class="navbar-collapse collapse clearfix" id="navbarSupportedContent">
 								<ul class="navigation clearfix">
-									<li class="current"><a href="index-3.html#">Home</a></li>  
-									<li class="dropdown"><a href="index-3.html#">Books</a>
+									<li class="current"><a href="{% url "home" %}">Главная</a></li>  
+									<li class="dropdown"><a href="{% url "bookPage" %}">Книги</a>
                                         <ul>
-                                            <li><a href="books.html">Books</a></li>
-                                            <li><a href="books-detail.html">Book Detail</a></li>
+                                            <li><a href="{% url "bookPage" %}">Книги</a></li>
+                                            <li><a href="{% url "bookDetail" %}">Детальная информация</a></li>
                                         </ul>
                                     </li> 
 									<li class="dropdown"><a href="index-3.html#">Blog</a>
                                         <ul>
-                                            <li><a href="blog.html">Blog</a></li>
-											<li><a href="blog-detail.html">Blog Detail</a></li>
+                                            <li><a href="#">Blog</a></li>
+											<li><a href="#">Blog Detail</a></li>
 											<li><a href="error.html">Not Found / 404</a></li>
                                         </ul>
                                     </li>
-									<li><a href="contact.html">Contact Us</a></li>
+									<li><a href="{% url "contact" %}">Contact Us</a></li>
 								</ul>
 							</div>
 						</nav>
@@ -386,7 +386,7 @@
 										</div>
 										<div class="text">Replenish him third creature and meat of the blessed void a fruit</div>
 										<a href="https://demo.auburnforest.com/html/bootcamp/bootcamp/books-detail.html" class="theme-btn btn-style-seven"><span class="txt">Enroll Now</span></a>
-									</div>
+												</div>
 								</div>
 							</div>
 							<!-- Institute Block Two -->
