--- a/templates/index.html
+++ b/templates/index.html
@@ -1,35 +1,8 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
+
 {% load static %}
-<html>
-<head>
-<meta charset="utf-8">
-<title>Bootcamp HTML Template | Homepage Three</title>
-<!-- Stylesheets -->
-<link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-<link href="{% static 'css/main.css' %}" rel="stylesheet">
-<link href="{% static 'css/responsive.css' %}" rel="stylesheet">
 
-<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-<link rel="icon" href="images/favicon.png" type="image/x-icon">
-
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
-
-<!-- Responsive -->
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-
-<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
-<!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
-</head>
-
-<body>
-
-<div class="page-wrapper">
- 	
-    <!-- Preloader -->
-    {% comment %} <div class="preloader"></div> {% endcomment %}
- 	
-    <!-- Main Header-->
+{% block content %}	
     <header class="main-header header-style-three">
 		
     	<!-- Header Upper -->
@@ -57,20 +30,9 @@
 							<div class="navbar-collapse collapse clearfix" id="navbarSupportedContent">
 								<ul class="navigation clearfix">
 									<li class="current"><a href="{% url "home" %}">Главная</a></li>  
-									<li class="dropdown"><a href="{% url "bookPage" %}">Книги</a>
-                                        <ul>
-                                            <li><a href="{% url "bookPage" %}">Книги</a></li>
-                                            <li><a href="{% url "bookDetail" %}">Детальная информация</a></li>
-                                        </ul>
-                                    </li> 
-									<li class="dropdown"><a href="index-3.html#">Blog</a>
-                                        <ul>
-                                            <li><a href="#">Blog</a></li>
-											<li><a href="#">Blog Detail</a></li>
-											<li><a href="error.html">Not Found / 404</a></li>
-                                        </ul>
-                                    </li>
-									<li><a href="{% url "contact" %}">Contact Us</a></li>
+									<li class="dropdown"><a href="{% url "bookPage" %}">Книги</a></li> 
+									<li class="dropdown"><a href="{% url "blog" %}">Блог</a></li>
+									<li><a href="{% url "contact" %}">Связаться</a></li>
 								</ul>
 							</div>
 						</nav>
@@ -1343,3 +1305,6 @@
 
 </body>
 </html>
+
+
+{% endblock content %}
