--- a/templates/page/books.html
+++ b/templates/page/books.html
@@ -1,35 +1,10 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
+
 {% load static %}
-<html>
-<head>
-<meta charset="utf-8">
-<title>Bootcamp HTML Template | Books</title>
-<!-- Stylesheets -->
-<link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-<link href="{% static 'css/main.css' %}" rel="stylesheet">
-<link href="{% static 'css/responsive.css' %}" rel="stylesheet">
 
-<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-<link rel="icon" href="images/favicon.png" type="image/x-icon">
+{% block content %}
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Titillium+Web:wght@300;400;600;700;900&display=swap" rel="stylesheet">
-
-<!-- Responsive -->
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-
-<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
-<!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
-</head>
-
-<body>
-
-<div class="page-wrapper">
- 	
-    {% comment %} <!-- Preloader -->
-    <div class="preloader"></div> {% endcomment %}
- 	
-    <!-- Main Header-->
+<!-- Main Header-->
     <header class="main-header header-style-one">
 		
 		<!-- Header Top -->
@@ -86,20 +61,9 @@
 							<div class="navbar-collapse collapse clearfix" id="navbarSupportedContent">
 								<ul class="navigation clearfix">
 									<li class="current"><a href="{% url "home" %}">Главная</a></li>  
-									<li class="dropdown"><a href="{% url "bookPage" %}">Книги</a>
-                                        <ul>
-                                            <li><a href="{% url "bookPage" %}">Книги</a></li>
-                                            <li><a href="{% url "bookDetail" %}">Детальна информация</a></li>
-                                        </ul>
-                                    </li> 
-									<li class="dropdown"><a href="index-3.html#">Blog</a>
-                                        <ul>
-                                            <li><a href="blog.html">Blog</a></li>
-											<li><a href="blog-detail.html">Blog Detail</a></li>
-											<li><a href="error.html">Not Found / 404</a></li>
-                                        </ul>
-                                    </li>
-									<li><a href="{% url "contact" %}">Contact Us</a></li>
+									<li class="dropdown"><a href="{% url "bookPage" %}">Книги</a></li> 
+									<li class="dropdown"><a href="{% url "blog" %}">Блог</a></li>
+									<li><a href="{% url "contact" %}">Связаться</a></li>
 								</ul>
 							</div>
 							
@@ -1584,3 +1548,4 @@
 
 </body>
 </html>
+{% endblock content %}
