add page courses

--- a/templates/page/courses.html
+++ b/templates/page/courses.html
@@ -97,7 +97,7 @@
 	<!-- Page Title -->
     <section class="page-title">
         <div class="auto-container">
-			<h1>Книги</h1>
+			<h1>Курсы</h1>
 			
 			<!-- Search Boxed -->
 			<div class="search-boxed">
@@ -150,7 +150,7 @@
 									<div class="tab active-tab" id="prod-html">
 										<div class="content">
 											<div class="row clearfix">
-												{% for bk in book %}
+												{% for cours in courses %}
 													<div class="book-block col-lg-3 col-md-4 col-sm-12">
 														<div class="inner-box">
 															<figure class="image-box">
@@ -159,14 +159,14 @@
 																<div class="overlay-box">
 																	<div class="overlay-inner">
 																		<div class="content">
-																			<a href="{% url "bookDetail" %}" class="link"><span class="icon fa fa-link"></span></a>
-																			<a href="{{ bk.img.url }}" data-fancybox="books" data-caption="" class="link"><span class="icon flaticon-full-screen"></span></a>
+																			<a href="#" class="link"><span class="icon fa fa-link"></span></a>
+																			<a href="{{ cours.img.url }}" data-fancybox="books" data-caption="" class="link"><span class="icon flaticon-full-screen"></span></a>
 																		</div>
 																	</div>
 																</div>
 															</figure>
 															<div class="lower-box">
-																<h6><a href="{% url "bookDetail" %}">{{ bk.title }}</a></h6>
+																<h6><a href="#">{{ cours.title }}</a></h6>
 															</div>
 														</div>
 													</div>
