--- a/templates/page/blog.html
+++ b/templates/page/blog.html
@@ -61,6 +61,7 @@
 								<ul class="navigation clearfix">
 									<li class="current"><a href="{% url "home" %}">Главная</a></li>  
 									<li class="dropdown"><a href="{% url "bookPage" %}">Книги</a></li> 
+									<li class="dropdown"><a href="{% url "courses" %}">Курсы</a></li>
 									<li class="dropdown"><a href="{% url "blog" %}">Блог</a></li>
 									<li><a href="{% url "contact" %}">Связаться</a></li>
 								</ul>
