--- a/templates/page/books-detail.html
+++ b/templates/page/books-detail.html
@@ -4,95 +4,8 @@
 
 {% block content %}
 
-<!-- Main Header-->
-    <header class="main-header header-style-one">
-		
-		<!-- Header Top -->
-        <div class="header-top">
-            <div class="auto-container">
-                <div class="clearfix">
-				
-					<!-- Top Left -->
-                    <div class="top-left pull-left clearfix">
-					
-						<!-- Info List -->
-                        <ul class="info-list">
-							<li><span>Call Us:</span><a href="tel:+123-456-7890"> +1 (800) 123-4567</a></li>
-							<li><span>Email Us:</span><a href="mailto:info@yourcompany.com"> info@yourcompany.com</a></li>
-						</ul>
-						
-                    </div>
-					
-					<!-- Top Right -->
-					<div class="top-right pull-right clearfix">
-						<!-- Login Nav -->
-						<ul class="login-nav">
-							<li><a href="login.html">Log In</a></li>
-							<li><a href="register.html">Register</a></li>
-						</ul>
-					</div>
-					
-                </div>
-            </div>
-        </div>
-		
-    	<!-- Header Upper -->
-        <div class="header-upper">
-        	<div class="auto-container">
-            	<div class="clearfix">
-                	
-                	<div class="pull-left logo-box">
-                    	<div class="logo"><a href="index.html"><img src="images/logo.png" alt="" title="Bootcamp"></a></div>
-                    </div>
-                   	
-                   	<div class="nav-outer clearfix">
-						<!--Mobile Navigation Toggler-->
-                        <div class="mobile-nav-toggler"><span class="icon flaticon-menu"></span></div>
-						<!-- Main Menu -->
-						<nav class="main-menu show navbar-expand-md">
-							<div class="navbar-header">
-								<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-								</button>
-							</div>
+{% include "headerPages.html" %}
 
-							<div class="navbar-collapse collapse clearfix" id="navbarSupportedContent">
-								<ul class="navigation clearfix">
-									<li class="current"><a href="{% url "home" %}">Главная</a></li>  
-									<li class="dropdown"><a href="{% url "bookPage" %}">Книги</a></li> 
-									<li class="dropdown"><a href="{% url "courses" %}">Курсы</a></li>
-									<li class="dropdown"><a href="{% url "blog" %}">Блог</a></li>
-									<li><a href="{% url "contact" %}">Связаться</a></li>
-								</ul>
-							</div>
-							
-						</nav>
-						
-					</div>
-                   
-                </div>
-            </div>
-        </div>
-        <!-- End Header Upper -->
-        
-		<!-- Mobile Menu  -->
-        <div class="mobile-menu">
-            <div class="menu-backdrop"></div>
-            <div class="close-btn"><span class="icon flaticon-multiply"></span></div>
-            
-            <nav class="menu-box">
-                <div class="nav-logo"><a href="index.html"><img src="images/logo-5.png" alt="" title=""></a></div>
-                <div class="menu-outer">
-					<!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
-				</div>
-            </nav>
-        </div>
-		<!-- End Mobile Menu -->
-		
-    </header>
-    <!-- End Main Header -->
 	
 	<!-- Page Title -->
     <section class="page-title">
