--- a/templates/page/error.html
+++ b/templates/page/error.html
@@ -1,132 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Bootcamp HTML Template | Error / 404</title>
-<!-- Stylesheets -->
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/main.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
+{% load static %}
 
-<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-<link rel="icon" href="images/favicon.png" type="image/x-icon">
-
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Titillium+Web:wght@300;400;600;700;900&display=swap" rel="stylesheet">
-
-<!-- Responsive -->
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-
-<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
-<!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
-</head>
-
-<body>
-
-<div class="page-wrapper">
+{% block content %}
  	
-    <!-- Preloader -->
-    <div class="preloader"></div>
- 	
-    <!-- Main Header-->
-    <header class="main-header header-style-one">
-		
-		<!-- Header Top -->
-        <div class="header-top">
-            <div class="auto-container">
-                <div class="clearfix">
-				
-					<!-- Top Left -->
-                    <div class="top-left pull-left clearfix">
-					
-						<!-- Info List -->
-                        <ul class="info-list">
-							<li><span>Call Us:</span><a href="tel:+123-456-7890"> +1 (800) 123-4567</a></li>
-							<li><span>Email Us:</span><a href="mailto:info@yourcompany.com"> info@yourcompany.com</a></li>
-						</ul>
-						
-                    </div>
-					
-					<!-- Top Right -->
-					<div class="top-right pull-right clearfix">
-						<!-- Login Nav -->
-						<ul class="login-nav">
-							<li><a href="login.html">Log In</a></li>
-							<li><a href="register.html">Register</a></li>
-						</ul>
-					</div>
-					
-                </div>
-            </div>
-        </div>
-		
-    	<!-- Header Upper -->
-        <div class="header-upper">
-        	<div class="auto-container">
-            	<div class="clearfix">
-                	
-                	<div class="pull-left logo-box">
-                    	<div class="logo"><a href="index.html"><img src="images/logo.png" alt="" title="Bootcamp"></a></div>
-                    </div>
-                   	
-                   	<div class="nav-outer clearfix">
-						<!--Mobile Navigation Toggler-->
-                        <div class="mobile-nav-toggler"><span class="icon flaticon-menu"></span></div>
-						<!-- Main Menu -->
-						<nav class="main-menu show navbar-expand-md">
-							<div class="navbar-header">
-								<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-								</button>
-							</div>
+{% include "headerPages.html" %}
 
-							<div class="navbar-collapse collapse clearfix" id="navbarSupportedContent">
-								<ul class="navigation clearfix">
-									<li class="current"><a href="index-3.html#">Home</a></li>  
-									<li class="dropdown"><a href="index-3.html#">Books</a>
-                                        <ul>
-                                            <li><a href="books.html">Books</a></li>
-                                            <li><a href="books-detail.html">Book Detail</a></li>
-                                        </ul>
-                                    </li> 
-									<li class="dropdown"><a href="index-3.html#">Blog</a>
-                                        <ul>
-                                            <li><a href="blog.html">Blog</a></li>
-											<li><a href="blog-detail.html">Blog Detail</a></li>
-											<li><a href="error.html">Not Found / 404</a></li>
-                                        </ul>
-                                    </li>
-									<li><a href="contact.html">Contact Us</a></li>
-								</ul>
-							</div>
-							
-						</nav>
-						
-					</div>
-                   
-                </div>
-            </div>
-        </div>
-        <!-- End Header Upper -->
-        
-		<!-- Mobile Menu  -->
-        <div class="mobile-menu">
-            <div class="menu-backdrop"></div>
-            <div class="close-btn"><span class="icon flaticon-multiply"></span></div>
-            
-            <nav class="menu-box">
-                <div class="nav-logo"><a href="index.html"><img src="images/logo-5.png" alt="" title=""></a></div>
-                <div class="menu-outer">
-					<!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
-				</div>
-            </nav>
-        </div>
-		<!-- End Mobile Menu -->
-		
-    </header>
-    <!-- End Main Header -->
 	
 	<!-- Page Title -->
     <section class="page-title style-two">
@@ -282,3 +159,4 @@
 
 </body>
 </html>
+{% endblock content %}
