add single header for all pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
             	<div class="clearfix">
                 	
                 	<div class="pull-left logo-box">
-                    	<div class="logo"><a href="https://demo.auburnforest.com/html/bootcamp/bootcamp/index.html"><img src="images/logo-4.png" alt="" title="Bootcamp"></a></div>
+                    	<div class="logo"><a href="{% url "home" %}"><img src="{{ data.logo }}" alt="" title="Bootcamp"></a></div>
                     </div>
                    	
                    	<div class="nav-outer clearfix">
