--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
  <html>
  <head>
  <meta charset="utf-8">
- <title>Bootcamp HTML Template | Homepage Three</title>
+ <title>{{ data.name }}</title>
  <!-- Stylesheets -->
  <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
  <link href="{% static 'css/main.css' %}" rel="stylesheet">
