--- a/templates/page/courses.html
+++ b/templates/page/courses.html
@@ -79,7 +79,7 @@
 																</div>
 															</figure>
 															<div class="lower-box">
-																<h6><a href="#">{{ cours.title }}</a></h6>
+																<h6><a href="{{ courses.get_absolute_url }}">{{ cours.title }}</a></h6>
 															</div>
 														</div>
 													</div>
