--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 							<div class="navbar-collapse collapse clearfix" id="navbarSupportedContent">
 								<ul class="navigation clearfix">
 									<li class="current"><a href="{% url "home" %}">Главная</a></li>  
-									<li class="dropdown"><a href="{% url "bookPage" %}">Книги</a></li> 
+									<li class="dropdown"><a href="{% url "books" %}">Книги</a></li> 
 									<li class="dropdown"><a href="{% url "courses" %}">Курсы</a></li>
 									<li class="dropdown"><a href="{% url "blog" %}">Блог</a></li>
 									<li><a href="{% url "contact" %}">Связаться</a></li>
